welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:18: error: ')' expected but '}' found.
			}
                        ^max1020:26: error: Unmatched closing brace '}' ignored here
 }
 ^